fix(zodiaclist): Update hover styles for Home link to improve visibility in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,8 @@ header{
     transition: background-color 0.3s ease;
 }
 .navbar #Home:hover{
-    background-color: rgb(167, 167, 167);
-    color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 .navbar #ZodiacSignList{
     text-decoration: none;
